[package]
name = "economic-checks"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2", features = ["derive"] }
scale-info = { version = "1.0", features = ["derive"] }
log = { version = "0.4.14" }
parity-wasm = { version = "0.42.2" }
parking_lot = "0.11.2"
primitive-types = { version = "0.10.1", features = ["scale-info"] }
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
serde = "1.0.136"
env_logger = "0.9"
hex-literal = "0.3.4"
hex = "0.4.3"
arbitrary = { version = "1" }
wasm-mutate = "0.2.1"
wasmparser = "0.83.0"

# Internal deps
common = { package = "gear-common", path = "../../common" }
gear-core = { path = "../../core" }
gear-runtime = { path = "../../runtime" }
pallet-gear = { path = "../../pallets/gear" }
pallet-usage = { path = "../../pallets/usage" }
tests-ncompose = { path = "../../tests/ncompose" }
tests-mul-by-const = { path = "../../tests/mul-by-const" }
tests-compose = { path = "../../tests/compose" }
tests-contract-template = { path = "../../tests/contract-template" }

# Substrate deps
frame-support = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
sp-core = { version = "5.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
sp-std = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
sp-io = { version = "5.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
sp-runtime = { version = "5.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
# sp-arithmetic = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }

[dev-dependencies]
wat = "1.0"
wasmprinter = "0.2.33"
